# ceres-optim

./: CMakeLists.txt  main.cc  optim.hpp  points.txt  test.cc
